Pest report 100% && locations 20%
