# routes/web.php
@@ -11,13 +11,22 @@ Route::get('api/specification', function (){
     return view('swagger.specification');
 })->name('api.specification');
 
-Route::get('project','ProjectController@index')->name('project.index');
-Route::get('project/create','ProjectController@create')->name('project.create');
-Route::post('project/save','ProjectController@save')->name('project.save');
-Route::delete('project/{project}/delete','ProjectController@delete')->name('project.delete');
-Route::post('project/{project}/token','ProjectController@token')->name('project.token');
+Route::get('projects','ProjectController@index')->name('project.index');
+Route::get('projects/create','ProjectController@create')->name('project.create');
+Route::post('projects/save','ProjectController@save')->name('project.save');
+Route::delete('projects/{project}/delete','ProjectController@delete')->name('project.delete');
+Route::post('projects/{project}/token','ProjectController@token')->name('project.token');
 
-Route::get('/report/create','ReportController@create')->name('report.create');
+Route::get('reports/create',function(){
+    return view('pages.create_report');
+})->name('report.create');
 
+Route::get('reports',function(){
+    return view('pages.reports');
+})->name('report.index');
+
+Route::get('me/locations',function(){
+    return view('pages.locations');
+})->name('me.locations');
 
 
